--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "cors": "^2.8.5",
+    "ethers": "^6.8.0",
     "express": "^4.18.2",
     "web3": "^4.2.1"
   },
