--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hardhat": "^2.18.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "4.9.3"
+    "@openzeppelin/contracts": "4.9.3",
+    "react-router-dom": "^6.17.0"
   }
 }
