--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "4.9.3",
+    "crypto": "^1.0.1",
     "react-router-dom": "^6.17.0",
     "react-select": "^5.7.7"
   }
