Encryption of booster data cards

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "4.9.3",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "react-router-dom": "^6.17.0",
     "react-select": "^5.7.7"
   }
