--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^1.5.1",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.1",
     "ethers": "^6.8.0",
     "express": "^4.18.2",
     "web3": "^4.2.1"
